finally got rid of that shifting bug

--- a/client/src/app/master/master.component.css
+++ b/client/src/app/master/master.component.css
@@ -180,6 +180,10 @@ button, button:focus { outline: none; }
     margin-top: 1%;
 }
 
+.mainRow{
+    top: 56px
+}
+
 }
 
 @media (max-width: 500px) {
