--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -243,7 +243,7 @@ body, html {
     .add {
         position: fixed !important;
         top: 12px;
-        right: 40px;
+        right: 60px;
         color:white;
         font-size: 10px;
     }
@@ -251,7 +251,7 @@ body, html {
     .searchButton {
         position: fixed !important;
         top: 12px;
-        right: 40px;
+        right: 60px;
         color:white;
         font-size: 10px;
     }
